# SVGForge

./: .gitignore  CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.h  README.md  app_icon.rc  main.cpp  resources.qrc
.VSCodeCounter/2025-01-16_03-54-38/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-01-16_04-52-10/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
include/: GlobalData.h  HelperFunctions.h  ImageDisplayWidget.h  MainMenuWidget.h  PreDefinedColors.h  SVGAttributes.h  SVGElements.h  SVGNode.h  SVGRenderWorker.h  SVGRenderer.h  XMLParser.h
src/helper/: HelperFunctions.cpp
src/svg/: SVGNode.cpp  SVGRenderWorker.cpp  SVGRenderer.cpp
src/widget/: ImageDisplayWidget.cpp  MainMenuWidget.cpp
src/xml/: XMLParser.cpp
